adding loanscan support
