# packages/bzx-api/src/swagger.json
@@ -37,6 +37,19 @@
     "https"
   ],
   "paths": {
+    "/interest-rates": {
+      "get": {
+        "tags": [
+          "Stats"
+        ],
+        "summary": "Get supply interest rates (APR and APY), specifically designed for loanscan",
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/supply-rate-apr": {
       "get": {
         "tags": [
